Lots of changes: added advanced settings, replaced getRuntime().exec with ProcessBuilder so that I could redirect the error stream, fixed the native code's license.